# sh

./: README.md  manage.py  pyproject.toml  pytest.ini  run_app.sh
rates/: apps.py  exceptions.py  models.py  seed.py  serializers.py  urls.py  utils.py  validations.py  views.py
rates/management/commands/: seed_parking_rates.py
rates/migrations/: 0001_initial.py  0002_parkingrate_original_given_timezone_and_more.py  0003_rename_end_time_parkingrate_end_time_utc_and_more.py  0004_alter_parkingrate_days_and_more.py
rates/services/: parking_rate_service.py
rates/tests/: conftest.py  factories.py  test_app_config.py  test_models.py  test_serializers.py  test_utils.py  test_validations.py  test_views.py
rates/tests/test_services/: test_parking_rate_service.py
settings/: settings.py  urls.py
